--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 /* 🔒 On neutralise le navigateur */
 :root {
-  color-scheme: light;
+  color-scheme: light dark;
 }
 
 .dark {
